# CoChem-Agents

./: DESIGN_PHILOSOPHY.md  LICENSE  QUICK_START.md  README.md  check_mcp_status.sh  chemagent_aliases.sh  chemagent_cli.py  chemagent_install.py  config.example.yaml  gemini_rules.md  install.py  install.sh  install_all_mcp_servers.sh  install_gemini.py  install_gemini_simple.sh  install_interactive.py  install_mcp_tools.sh  install_rdkit_mcp.sh  mcp_config.json  pyproject.toml  search_mcp_packages.py  test_mcp_servers.py  update_mcp_integration.py
chemagent/: __init__.py  mcp_server.py
chemagent/commands/: __init__.py  loader.py
chemagent/core/: __init__.py  config.py
chemagent/enhancers/: __init__.py  base.py  claude_enhancer.py  gemini_enhancer.py  gemini_functions.py
chemagent/mcp_tools/: __init__.py  orchestrator.py  tool_definitions.py
chemagent/orchestrator/: __init__.py  workflow.py
chemagent/roles/: __init__.py  loader.py
chemagent/tools/: __init__.py  literature.py  literature_enhanced.py  patent_search.py  price_lookup.py  pubchem.py  rdkit_tools.py  safety_assessment.py  visualization.py
commands/: cc-analyze.md  cc-check.md  cc-design.md  cc-help.md  cc-optimize.md  cc-predict.md  cc-search.md  cc-synthesize.md  cc-workflow.md
docs/: ARCHITECTURE.md  BACKEND_TOOLS.md  GEMINI_CLI_USAGE.md  GEMINI_INTEGRATION.md  MCP_AVAILABILITY_STATUS.md  MCP_COMPLIANCE_CHECK.md  MCP_INTEGRATION_GUIDE.md  MCP_SERVERS.md  RDKIT_MCP_INTEGRATION.md  SIMPLIFIED_COMMANDS.md  SUPERCLAUD_COMPARISON.md  THIRD_PARTY_MCP.md  TOOL_COMPARISON.md
examples/: claude_code_usage.md  custom_command_example.md  gemini_cli_usage.md
mcp_servers/: base_mcp_server.py  base_mcp_server_v2.py
mcp_servers/examples/: mcp_client_example.py
mcp_servers/mcp_chembl/: README.md  mcp_chembl_server.py  pyproject.toml
mcp_servers/mcp_openbabel/: README.md  mcp_openbabel_server.py  pyproject.toml
mcp_servers/mcp_pubchem/: README.md  mcp_pubchem_server.py  pyproject.toml
roles/: chemist.md  data-analyst.md  drug-designer.md  safety-expert.md  synthesist.md
